--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <meta charset=utf-8/>
+    <title>ic-04</title>
+    <h1>Intro to HTML and CSS</h1>
+    <h2>Rachel Bringas</h2>
 </head>
 
 
 <body>
-
+<div id="div1">
+</div>
 
 </body>
 
