--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 
 
 <body>
-<div id="div1">
+<div id="div1" class="container">
+    <p class="italic">My favorite visualization is a scatter plot</p>
+</div>
+<div id="div2" class="container">
+    <svg>
+        <rect width="200" height="100" fill="purple"/>
+    </svg>
 </div>
 
 </body>
