--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" href="style.css">
     <title>ic-04</title>
     <h1>Intro to HTML and CSS</h1>
     <h2>Rachel Bringas</h2>
